# ml-deployment-example

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements.txt
.github/workflows/: docker_build.yml  docker_build_and_test.yml  docker_deploy.yml  docker_precommit.yml  docker_pytest.yml  docker_test.yml  inference_app_deploy.yml
inference-app/: Dockerfile  pyproject.toml
inference-app/src/app/: app.py
models/: pyproject.toml
models-jax/: pyproject.toml
models-jax/notebooks/: basics.ipynb  multiprocess.ipynb
models-jax/src/toy_model/: flax_train.py
models-jax/src/utils/: sharding.py
models-pytorch/: pyproject.toml
models-pytorch/src/toy_model/: dataloader.py  ddp_train.py  fsdp_train.py  model.py
src/: app.py
