[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-deployment-example"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "fastapi[standard]>=0.115.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pre-commit>=4.2.0",
]

requires-python = ">=3.12"

[project.scripts]
toy_train = "cli.toy_train:main"
