[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "models-jax"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
    "pip>=24.2",
    "flax>=0.10.5",
    "matplotlib>=3.10.1",
]

[project.optional-dependencies]
cpu = [
    "jax>=0.5.3",
]
gpu = [
    "jax[cuda12]>=0.5.3",
]

[tool.uv]
conflicts = [
    [
        { package = "models", extra = "cpu" },
        { package = "models", extra = "gpu" },
    ],
]

[project.scripts]
toy_train = "cli.toy_train:main"
