[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "models-pytorch"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
    "pip>=24.2",
    "numpy>=2.2.4",
    "torch>=2.6.0",
]

[project.scripts]
toy_train = "cli.toy_train:main"
